--- a/_config.yml
+++ b/_config.yml
@@ -23,13 +23,13 @@ repository               : "EnjiXiong/xx.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Xiong Enji"
   pronouns         : "he/him/his" 
   bio              : "Undergraduate; AI; Quantum Computation"
   location         : "China"
-  employer         : "The Hong Kong University of Science and Technology(Guangzhou)"
+  employer         : "The Hong Kong University of Science and Technology (Guangzhou)"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "exiong092@connect.hkust-gz.edu.cn" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
